# Software-Engineering-Project

./: Makefile  README.md  boosted_community_rep.py  requirements.txt  uml_beautifier.py
Sequence-Diagram-UML-Resouces/: Readme.md  sequence-uml-oo_test.yml
oo-test/: .clang-uml  CMakeLists.txt
oo-test/include/core/: component.hpp  entity.hpp  gameobject.hpp  transform.hpp
oo-test/include/event/: event.hpp
oo-test/include/render/: renderer.hpp  texture.hpp
oo-test/include/resource/: resource.hpp
oo-test/include/system/: entity_manager.hpp
oo-test/src/: component.cpp  entity.cpp  entity_manager.cpp  main.cpp  renderer.cpp  resource.cpp
